Changed a couple of params and values

--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -362,9 +362,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_date = '2018-01-03'\n",
-    "# sample_date_format = '18-01-2018'\n",
-    "sample_time = '05:00:00'"
+    "sample_date = '2018-01-23'\n",
+    "sample_time = '00:00:00'"
    ]
   },
   {
@@ -435,9 +434,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moving 6 people from 118 to 102\n",
-      "Saves 1473.16015625 of electricity\n",
-      "Power consumption reduced from 10338.1015625 to 8864.94140625\n"
+      "Moving 3 people from 114 to 108\n",
+      "Saves 1523.75390625 of electricity\n",
+      "Power consumption reduced from 11097.1171875 to 9573.36328125\n"
      ]
     }
    ],
@@ -503,109 +502,109 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>825</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>103</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>15</td>\n",
-       "      <td>55</td>\n",
-       "      <td>1484.207031</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1067</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>104</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>3</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1466.906250</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4966</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>119</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>1</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1505.234375</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1068</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>104</td>\n",
-       "      <td>low hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>8</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1471.636719</td>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2195</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>108</td>\n",
-       "      <td>low hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1489.589844</td>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>525</th>\n",
-       "      <td>AC</td>\n",
+       "      <th>633</th>\n",
+       "      <td>Heater</td>\n",
        "      <td>102</td>\n",
        "      <td>cold</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>19</td>\n",
-       "      <td>59</td>\n",
-       "      <td>1447.367188</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2095.269531</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2802</th>\n",
+       "      <td>Microwave</td>\n",
+       "      <td>110</td>\n",
+       "      <td>cold</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>10</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1470.800781</td>\n",
+       "      <td>283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>415</th>\n",
+       "      <td>Microwave</td>\n",
+       "      <td>101</td>\n",
+       "      <td>very cold</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1503.105469</td>\n",
+       "      <td>289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5093</th>\n",
+       "      <td>Microwave</td>\n",
+       "      <td>119</td>\n",
+       "      <td>low hot</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1512.203125</td>\n",
+       "      <td>295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2560</th>\n",
+       "      <td>Microwave</td>\n",
+       "      <td>109</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1501.253906</td>\n",
+       "      <td>301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2323</th>\n",
+       "      <td>Microwave</td>\n",
+       "      <td>108</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1490.730469</td>\n",
+       "      <td>301</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     device  room weather_type        date from_time   to_time           time  \\\n",
-       "825      AC   103     very hot  2018-01-03  05:00:00  06:00:00  early morning   \n",
-       "1067     AC   104     very hot  2018-01-03  05:00:00  06:00:00  early morning   \n",
-       "4966     AC   119     very hot  2018-01-03  05:00:00  06:00:00  early morning   \n",
-       "1068     AC   104      low hot  2018-01-03  05:00:00  06:00:00  early morning   \n",
-       "2195     AC   108      low hot  2018-01-03  05:00:00  06:00:00  early morning   \n",
-       "525      AC   102         cold  2018-01-03  05:00:00  06:00:00  early morning   \n",
+       "         device  room weather_type        date from_time   to_time      time  \\\n",
+       "633      Heater   102         cold  2018-01-23  00:00:00  01:00:00  midnight   \n",
+       "2802  Microwave   110         cold  2018-01-23  00:00:00  01:00:00  midnight   \n",
+       "415   Microwave   101    very cold  2018-01-23  00:00:00  01:00:00  midnight   \n",
+       "5093  Microwave   119      low hot  2018-01-23  00:00:00  01:00:00  midnight   \n",
+       "2560  Microwave   109          hot  2018-01-23  00:00:00  01:00:00  midnight   \n",
+       "2323  Microwave   108          hot  2018-01-23  00:00:00  01:00:00  midnight   \n",
        "\n",
        "      no_of_people  time_stayed_mins        power  priorities  \n",
-       "825             15                55  1484.207031          17  \n",
-       "1067             3                16  1466.906250          17  \n",
-       "4966             1                40  1505.234375          17  \n",
-       "1068             8                35  1471.636719          41  \n",
-       "2195             0                 0  1489.589844          41  \n",
-       "525             19                59  1447.367188          70  "
+       "633              0                 0  2095.269531          36  \n",
+       "2802            10                36  1470.800781         283  \n",
+       "415              1                32  1503.105469         289  \n",
+       "5093            15                 4  1512.203125         295  \n",
+       "2560            10                48  1501.253906         301  \n",
+       "2323             3                 0  1490.730469         301  "
       ]
      },
      "execution_count": 14,
@@ -658,125 +657,125 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>825</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>103</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>15</td>\n",
-       "      <td>55</td>\n",
-       "      <td>1484.207031</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1067</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>104</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>3</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1466.906250</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4966</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>119</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>1</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1505.234375</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1068</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>104</td>\n",
-       "      <td>low hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>8</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1471.636719</td>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2195</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>108</td>\n",
-       "      <td>low hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1489.589844</td>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>525</th>\n",
-       "      <td>AC</td>\n",
+       "      <th>633</th>\n",
+       "      <td>Heater</td>\n",
        "      <td>102</td>\n",
        "      <td>cold</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>13</td>\n",
-       "      <td>59</td>\n",
-       "      <td>1447.367188</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2095.269531</td>\n",
+       "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4710</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>118</td>\n",
+       "      <th>2802</th>\n",
+       "      <td>Microwave</td>\n",
+       "      <td>110</td>\n",
        "      <td>cold</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>6</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1473.160156</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>10</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1470.800781</td>\n",
+       "      <td>283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>415</th>\n",
+       "      <td>Microwave</td>\n",
+       "      <td>101</td>\n",
+       "      <td>very cold</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1503.105469</td>\n",
+       "      <td>289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5093</th>\n",
+       "      <td>Microwave</td>\n",
+       "      <td>119</td>\n",
+       "      <td>low hot</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1512.203125</td>\n",
+       "      <td>295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2560</th>\n",
+       "      <td>Microwave</td>\n",
+       "      <td>109</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1501.253906</td>\n",
+       "      <td>301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2323</th>\n",
+       "      <td>Microwave</td>\n",
+       "      <td>108</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1490.730469</td>\n",
+       "      <td>301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3812</th>\n",
+       "      <td>Microwave</td>\n",
+       "      <td>114</td>\n",
+       "      <td>very hot</td>\n",
+       "      <td>2018-01-23</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>3</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1523.753906</td>\n",
+       "      <td>307</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     device  room weather_type        date from_time   to_time           time  \\\n",
-       "825      AC   103     very hot  2018-01-03  05:00:00  06:00:00  early morning   \n",
-       "1067     AC   104     very hot  2018-01-03  05:00:00  06:00:00  early morning   \n",
-       "4966     AC   119     very hot  2018-01-03  05:00:00  06:00:00  early morning   \n",
-       "1068     AC   104      low hot  2018-01-03  05:00:00  06:00:00  early morning   \n",
-       "2195     AC   108      low hot  2018-01-03  05:00:00  06:00:00  early morning   \n",
-       "525      AC   102         cold  2018-01-03  05:00:00  06:00:00  early morning   \n",
-       "4710     AC   118         cold  2018-01-03  05:00:00  06:00:00  early morning   \n",
+       "         device  room weather_type        date from_time   to_time      time  \\\n",
+       "633      Heater   102         cold  2018-01-23  00:00:00  01:00:00  midnight   \n",
+       "2802  Microwave   110         cold  2018-01-23  00:00:00  01:00:00  midnight   \n",
+       "415   Microwave   101    very cold  2018-01-23  00:00:00  01:00:00  midnight   \n",
+       "5093  Microwave   119      low hot  2018-01-23  00:00:00  01:00:00  midnight   \n",
+       "2560  Microwave   109          hot  2018-01-23  00:00:00  01:00:00  midnight   \n",
+       "2323  Microwave   108          hot  2018-01-23  00:00:00  01:00:00  midnight   \n",
+       "3812  Microwave   114     very hot  2018-01-23  00:00:00  01:00:00  midnight   \n",
        "\n",
        "      no_of_people  time_stayed_mins        power  priorities  \n",
-       "825             15                55  1484.207031          17  \n",
-       "1067             3                16  1466.906250          17  \n",
-       "4966             1                40  1505.234375          17  \n",
-       "1068             8                35  1471.636719          41  \n",
-       "2195             0                 0  1489.589844          41  \n",
-       "525             13                59  1447.367188          70  \n",
-       "4710             6                27  1473.160156          70  "
+       "633              0                 0  2095.269531          36  \n",
+       "2802            10                36  1470.800781         283  \n",
+       "415              1                32  1503.105469         289  \n",
+       "5093            15                 4  1512.203125         295  \n",
+       "2560            10                48  1501.253906         301  \n",
+       "2323             0                 0  1490.730469         301  \n",
+       "3812             3                52  1523.753906         307  "
       ]
      },
      "execution_count": 15,
