--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -358,14 +358,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "messages = []\n",
     "actions = []\n",
-    "savings = []\n",
-    "\n",
+    "savings = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for main_index, main_row in df_home_data_test.iterrows():\n",
     "    sample_date = main_row['date']\n",
     "    sample_time = main_row['from_time']\n",
@@ -597,7 +604,7 @@
     "df_home_data_test['action'] = actions\n",
     "df_home_data_test['savings'] = savings\n",
     "\n",
-    "df_home_data_test.to_csv('../../data/final_output.csv', index=False)"
+    "# df_home_data_test.to_csv('../../data/final_output.csv', index=False)"
    ]
   }
  ],
