--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -29,9 +29,9 @@
    "outputs": [],
    "source": [
     "# Import Dataset\n",
-    "df_home_data_test = pd.read_csv('../../data/home_data_predict.csv')\n",
-    "df_home_priority = pd.read_csv('../../data/home_priority.csv')\n",
-    "date_time_group = pd.read_csv('../../data/date_time_group.csv')"
+    "df_home_data_test = pd.read_csv('../../data/trial1/home_data_predict.csv')\n",
+    "df_home_priority = pd.read_csv('../../data/trial1/home_priority.csv')\n",
+    "date_time_group = pd.read_csv('../../data/trial1/date_time_group.csv')"
    ]
   },
   {
@@ -604,7 +604,7 @@
     "df_home_data_test['action'] = actions\n",
     "df_home_data_test['savings'] = savings\n",
     "\n",
-    "# df_home_data_test.to_csv('../../data/final_output.csv', index=False)"
+    "# df_home_data_test.to_csv('../../data/trial1/final_output.csv', index=False)"
    ]
   }
  ],
