--- a/regression/multiple_regression.ipynb
+++ b/regression/multiple_regression.ipynb
@@ -46,7 +46,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/home_data.csv')"
+    "df = pd.read_csv('../data/trail1/home_data.csv')"
    ]
   },
   {
@@ -381,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
