--- a/predict/decision_tree.ipynb
+++ b/predict/decision_tree.ipynb
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import pickle\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -46,7 +46,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/home_data_test.csv')"
+    "df = pd.read_csv('../data/trail_1/home_data_test.csv')"
    ]
   },
   {
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multiple Linear Regression"
+    "### Decision Tree Regression"
    ]
   },
   {
@@ -293,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regressor = joblib.load('../model/multiple_reg.pkl') "
+    "regressor = joblib.load('../model/decision_tree.pkl') "
    ]
   },
   {
@@ -304,8 +304,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1528.8984375 , 1512.6484375 , 1521.0078125 , ...,  293.8125    ,\n",
-       "        284.37890625,  283.625     ])"
+       "array([1550., 1533., 1745., ...,  220.,  257.,  268.])"
       ]
      },
      "execution_count": 9,
@@ -325,7 +324,7 @@
    "outputs": [],
    "source": [
     "df['power'] = y_pred\n",
-    "df.to_csv('../data/home_data_predict_dt.csv', index=False)"
+    "df.to_csv('../data/trail_1/home_data_predict_dt.csv', index=False)"
    ]
   }
  ],
