--- a/predict/random_forest.ipynb
+++ b/predict/random_forest.ipynb
@@ -46,7 +46,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/home_data_test.csv')"
+    "df = pd.read_csv('../data/trail_1/home_data_test.csv')"
    ]
   },
   {
@@ -304,8 +304,8 @@
     {
      "data": {
       "text/plain": [
-       "array([1528.8984375 , 1512.6484375 , 1521.0078125 , ...,  293.8125    ,\n",
-       "        284.37890625,  283.625     ])"
+       "array([1554.55      , 1505.53333333, 1597.54      , ...,  238.15333333,\n",
+       "        265.93666667,  235.81333333])"
       ]
      },
      "execution_count": 9,
@@ -325,7 +325,7 @@
    "outputs": [],
    "source": [
     "df['power'] = y_pred\n",
-    "df.to_csv('../data/home_data_predict_rf.csv', index=False)"
+    "df.to_csv('../data/trail_1/home_data_predict_rf.csv', index=False)"
    ]
   }
  ],
