--- a/main/experiment/trial_mlr_2.ipynb
+++ b/main/experiment/trial_mlr_2.ipynb
@@ -29,9 +29,9 @@
    "outputs": [],
    "source": [
     "# Import Dataset\n",
-    "df_home_data_test = pd.read_csv('../../data/trial_1/home_data_predict_mlr.csv')\n",
-    "df_home_priority = pd.read_csv('../../data/trial_1/home_priority.csv')\n",
-    "date_time_group = pd.read_csv('../../data/trial_1/date_time_group.csv')"
+    "df_home_data_test = pd.read_csv('../../data/trial_2/home_data_predict_mlr.csv')\n",
+    "df_home_priority = pd.read_csv('../../data/trial_2/home_priority.csv')\n",
+    "date_time_group = pd.read_csv('../../data/trial_2/date_time_group.csv')"
    ]
   },
   {
@@ -77,40 +77,40 @@
        "      <th>0</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>hot</td>\n",
+       "      <td>cold</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>01:00:00</td>\n",
-       "      <td>midnight</td>\n",
-       "      <td>3</td>\n",
-       "      <td>21</td>\n",
-       "      <td>1528.898438</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>05:00:00</td>\n",
+       "      <td>early morning</td>\n",
+       "      <td>6</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1527.609375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>very cold</td>\n",
+       "      <td>low hot</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>01:00:00</td>\n",
-       "      <td>midnight</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1512.648438</td>\n",
+       "      <td>05:00:00</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>early morning</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1526.191406</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>cold</td>\n",
+       "      <td>low hot</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>02:00:00</td>\n",
-       "      <td>03:00:00</td>\n",
-       "      <td>midnight</td>\n",
-       "      <td>4</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1521.007812</td>\n",
+       "      <td>07:00:00</td>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>13</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1540.515625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -118,25 +118,25 @@
        "      <td>100</td>\n",
        "      <td>cold</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>03:00:00</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>midnight</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1499.714844</td>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1523.480469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>very cold</td>\n",
+       "      <td>low hot</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>2</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1507.480469</td>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1554.679688</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -144,18 +144,18 @@
       ],
       "text/plain": [
        "  device  room weather_type        date from_time   to_time           time  \\\n",
-       "0     AC   100          hot  2018-01-01  00:00:00  01:00:00       midnight   \n",
-       "1     AC   100    very cold  2018-01-01  00:00:00  01:00:00       midnight   \n",
-       "2     AC   100         cold  2018-01-01  02:00:00  03:00:00       midnight   \n",
-       "3     AC   100         cold  2018-01-01  03:00:00  04:00:00       midnight   \n",
-       "4     AC   100    very cold  2018-01-01  05:00:00  06:00:00  early morning   \n",
+       "0     AC   100         cold  2018-01-01  04:00:00  05:00:00  early morning   \n",
+       "1     AC   100      low hot  2018-01-01  05:00:00  06:00:00  early morning   \n",
+       "2     AC   100      low hot  2018-01-01  07:00:00  08:00:00        morning   \n",
+       "3     AC   100         cold  2018-01-01  09:00:00  10:00:00        morning   \n",
+       "4     AC   100      low hot  2018-01-01  09:00:00  10:00:00        morning   \n",
        "\n",
        "   no_of_people  time_stayed_mins        power  \n",
-       "0             3                21  1528.898438  \n",
-       "1            10                 5  1512.648438  \n",
-       "2             4                22  1521.007812  \n",
-       "3             3                 5  1499.714844  \n",
-       "4             2                35  1507.480469  "
+       "0             6                24  1527.609375  \n",
+       "1             0                 0  1526.191406  \n",
+       "2            13                38  1540.515625  \n",
+       "3            14                 7  1523.480469  \n",
+       "4            10                26  1554.679688  "
       ]
      },
      "execution_count": 3,
@@ -464,102 +464,102 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>4923</th>\n",
+       "      <td>Television</td>\n",
+       "      <td>118</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>273.914062</td>\n",
+       "      <td>229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>5207</th>\n",
        "      <td>Television</td>\n",
        "      <td>119</td>\n",
        "      <td>hot</td>\n",
        "      <td>2018-01-14</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>4</td>\n",
-       "      <td>14</td>\n",
-       "      <td>283.625000</td>\n",
-       "      <td>224</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>6</td>\n",
+       "      <td>31</td>\n",
+       "      <td>282.250000</td>\n",
+       "      <td>229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4687</th>\n",
-       "      <td>Television</td>\n",
-       "      <td>117</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>2</td>\n",
-       "      <td>25</td>\n",
-       "      <td>288.171875</td>\n",
-       "      <td>230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4362</th>\n",
+       "      <th>2001</th>\n",
        "      <td>Refridgerator</td>\n",
-       "      <td>116</td>\n",
+       "      <td>107</td>\n",
        "      <td>low cold</td>\n",
        "      <td>2018-01-14</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>11</td>\n",
-       "      <td>29</td>\n",
-       "      <td>220.625000</td>\n",
-       "      <td>236</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>446</th>\n",
-       "      <td>Refridgerator</td>\n",
-       "      <td>101</td>\n",
-       "      <td>cold</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>11</td>\n",
-       "      <td>9</td>\n",
-       "      <td>232.757812</td>\n",
-       "      <td>242</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3582</th>\n",
-       "      <td>Refridgerator</td>\n",
-       "      <td>113</td>\n",
-       "      <td>cold</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>3</td>\n",
-       "      <td>51</td>\n",
-       "      <td>215.152344</td>\n",
-       "      <td>242</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>194</th>\n",
-       "      <td>Refridgerator</td>\n",
-       "      <td>100</td>\n",
-       "      <td>hot</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>early morning</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>7</td>\n",
        "      <td>27</td>\n",
-       "      <td>41</td>\n",
-       "      <td>254.175781</td>\n",
-       "      <td>260</td>\n",
+       "      <td>270.828125</td>\n",
+       "      <td>241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3107</th>\n",
+       "      <th>3061</th>\n",
        "      <td>Refridgerator</td>\n",
        "      <td>111</td>\n",
+       "      <td>very cold</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>13</td>\n",
+       "      <td>56</td>\n",
+       "      <td>222.601562</td>\n",
+       "      <td>253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3823</th>\n",
+       "      <td>Refridgerator</td>\n",
+       "      <td>114</td>\n",
+       "      <td>very cold</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>216.167969</td>\n",
+       "      <td>253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2279</th>\n",
+       "      <td>Refridgerator</td>\n",
+       "      <td>108</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>13</td>\n",
+       "      <td>43</td>\n",
+       "      <td>230.953125</td>\n",
+       "      <td>265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>954</th>\n",
+       "      <td>Refridgerator</td>\n",
+       "      <td>103</td>\n",
        "      <td>very hot</td>\n",
        "      <td>2018-01-14</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>15</td>\n",
-       "      <td>51</td>\n",
-       "      <td>252.437500</td>\n",
-       "      <td>266</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>9</td>\n",
+       "      <td>47</td>\n",
+       "      <td>229.605469</td>\n",
+       "      <td>271</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -567,22 +567,22 @@
       ],
       "text/plain": [
        "             device  room weather_type        date from_time   to_time  \\\n",
-       "5207     Television   119          hot  2018-01-14  04:00:00  05:00:00   \n",
-       "4687     Television   117     very hot  2018-01-14  04:00:00  05:00:00   \n",
-       "4362  Refridgerator   116     low cold  2018-01-14  04:00:00  05:00:00   \n",
-       "446   Refridgerator   101         cold  2018-01-14  04:00:00  05:00:00   \n",
-       "3582  Refridgerator   113         cold  2018-01-14  04:00:00  05:00:00   \n",
-       "194   Refridgerator   100          hot  2018-01-14  04:00:00  05:00:00   \n",
-       "3107  Refridgerator   111     very hot  2018-01-14  04:00:00  05:00:00   \n",
+       "4923     Television   118          hot  2018-01-14  23:00:00  00:00:00   \n",
+       "5207     Television   119          hot  2018-01-14  23:00:00  00:00:00   \n",
+       "2001  Refridgerator   107     low cold  2018-01-14  23:00:00  00:00:00   \n",
+       "3061  Refridgerator   111    very cold  2018-01-14  23:00:00  00:00:00   \n",
+       "3823  Refridgerator   114    very cold  2018-01-14  23:00:00  00:00:00   \n",
+       "2279  Refridgerator   108          hot  2018-01-14  23:00:00  00:00:00   \n",
+       "954   Refridgerator   103     very hot  2018-01-14  23:00:00  00:00:00   \n",
        "\n",
-       "               time  no_of_people  time_stayed_mins       power  priorities  \n",
-       "5207  early morning             4                14  283.625000         224  \n",
-       "4687  early morning             2                25  288.171875         230  \n",
-       "4362  early morning            11                29  220.625000         236  \n",
-       "446   early morning            11                 9  232.757812         242  \n",
-       "3582  early morning             3                51  215.152344         242  \n",
-       "194   early morning            27                41  254.175781         260  \n",
-       "3107  early morning            15                51  252.437500         266  "
+       "          time  no_of_people  time_stayed_mins       power  priorities  \n",
+       "4923  midnight            10                10  273.914062         229  \n",
+       "5207  midnight             6                31  282.250000         229  \n",
+       "2001  midnight             7                27  270.828125         241  \n",
+       "3061  midnight            13                56  222.601562         253  \n",
+       "3823  midnight             0                 0  216.167969         253  \n",
+       "2279  midnight            13                43  230.953125         265  \n",
+       "954   midnight             9                47  229.605469         271  "
       ]
      },
      "execution_count": 9,
@@ -604,7 +604,7 @@
     "df_home_data_test['action'] = actions\n",
     "df_home_data_test['savings'] = savings\n",
     "\n",
-    "df_home_data_test.to_csv('../../data/trial_1/final_output_mlr.csv', index=False)"
+    "df_home_data_test.to_csv('../../data/trial_2/final_output_mlr.csv', index=False)"
    ]
   }
  ],
