Trail 4 other algos

--- a/main/experiment/trial_4/trial_dt_4.ipynb
+++ b/main/experiment/trial_4/trial_dt_4.ipynb
@@ -31,7 +31,8 @@
     "# Import Dataset\n",
     "df_home_data_test = pd.read_csv('../../../data/trial_4/home_data_predict_dt.csv')\n",
     "df_home_priority = pd.read_csv('../../../data/trial_4/home_priority.csv')\n",
-    "date_time_group = pd.read_csv('../../../data/trial_4/date_time_group.csv')"
+    "date_time_group = pd.read_csv('../../../data/trial_4/date_time_group.csv')\n",
+    "date_time_group['date'] = pd.to_datetime(date_time_group['date'])"
    ]
   },
   {
@@ -77,53 +78,53 @@
        "      <th>0</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>very hot</td>\n",
+       "      <td>cold</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>00:00:00</td>\n",
        "      <td>01:00:00</td>\n",
+       "      <td>02:00:00</td>\n",
        "      <td>midnight</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1880.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1224.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>hot</td>\n",
+       "      <td>low hot</td>\n",
        "      <td>2018-01-01</td>\n",
+       "      <td>02:00:00</td>\n",
        "      <td>03:00:00</td>\n",
-       "      <td>04:00:00</td>\n",
        "      <td>midnight</td>\n",
-       "      <td>4</td>\n",
-       "      <td>54</td>\n",
-       "      <td>1337.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1852.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>hot</td>\n",
+       "      <td>very hot</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>06:00:00</td>\n",
        "      <td>07:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>6</td>\n",
-       "      <td>51</td>\n",
-       "      <td>1766.0</td>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>7</td>\n",
+       "      <td>57</td>\n",
+       "      <td>1238.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>low hot</td>\n",
+       "      <td>low cold</td>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>10:00:00</td>\n",
        "      <td>11:00:00</td>\n",
        "      <td>morning</td>\n",
-       "      <td>10</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1582.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1486.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -131,31 +132,31 @@
        "      <td>100</td>\n",
        "      <td>low cold</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>14:00:00</td>\n",
-       "      <td>15:00:00</td>\n",
-       "      <td>afternoon</td>\n",
-       "      <td>14</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1872.0</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>12</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1105.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  device  room weather_type        date from_time   to_time           time  \\\n",
-       "0     AC   100     very hot  2018-01-01  00:00:00  01:00:00       midnight   \n",
-       "1     AC   100          hot  2018-01-01  03:00:00  04:00:00       midnight   \n",
-       "2     AC   100          hot  2018-01-01  06:00:00  07:00:00  early morning   \n",
-       "3     AC   100      low hot  2018-01-01  10:00:00  11:00:00        morning   \n",
-       "4     AC   100     low cold  2018-01-01  14:00:00  15:00:00      afternoon   \n",
+       "  device  room weather_type        date from_time   to_time      time  \\\n",
+       "0     AC   100         cold  2018-01-01  01:00:00  02:00:00  midnight   \n",
+       "1     AC   100      low hot  2018-01-01  02:00:00  03:00:00  midnight   \n",
+       "2     AC   100     very hot  2018-01-01  07:00:00  08:00:00   morning   \n",
+       "3     AC   100     low cold  2018-01-01  10:00:00  11:00:00   morning   \n",
+       "4     AC   100     low cold  2018-01-01  11:00:00  12:00:00   morning   \n",
        "\n",
        "   no_of_people  time_stayed_mins   power  \n",
-       "0             4                 4  1880.0  \n",
-       "1             4                54  1337.0  \n",
-       "2             6                51  1766.0  \n",
-       "3            10                23  1582.0  \n",
-       "4            14                39  1872.0  "
+       "0            12                42  1224.0  \n",
+       "1            13                16  1852.0  \n",
+       "2             7                57  1238.0  \n",
+       "3            11                33  1486.0  \n",
+       "4            12                50  1105.0  "
       ]
      },
      "execution_count": 3,
@@ -299,43 +300,43 @@
        "      <th>0</th>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>00:00:00</td>\n",
-       "      <td>10372</td>\n",
+       "      <td>8000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>01:00:00</td>\n",
-       "      <td>9393</td>\n",
+       "      <td>8000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>02:00:00</td>\n",
-       "      <td>10013</td>\n",
+       "      <td>8000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>03:00:00</td>\n",
-       "      <td>10171</td>\n",
+       "      <td>8000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>04:00:00</td>\n",
-       "      <td>10650</td>\n",
+       "      <td>8000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date from_time  power\n",
-       "0  2018-01-01  00:00:00  10372\n",
-       "1  2018-01-01  01:00:00   9393\n",
-       "2  2018-01-01  02:00:00  10013\n",
-       "3  2018-01-01  03:00:00  10171\n",
-       "4  2018-01-01  04:00:00  10650"
+       "        date from_time  power\n",
+       "0 2018-01-01  00:00:00   8000\n",
+       "1 2018-01-01  01:00:00   8000\n",
+       "2 2018-01-01  02:00:00   8000\n",
+       "3 2018-01-01  03:00:00   8000\n",
+       "4 2018-01-01  04:00:00   8000"
       ]
      },
      "execution_count": 5,
@@ -464,125 +465,125 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5207</th>\n",
+       "      <th>5206</th>\n",
        "      <td>Television</td>\n",
        "      <td>119</td>\n",
        "      <td>low cold</td>\n",
        "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>201.0</td>\n",
-       "      <td>204</td>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>afternoon</td>\n",
+       "      <td>8</td>\n",
+       "      <td>41</td>\n",
+       "      <td>289.0</td>\n",
+       "      <td>202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4133</th>\n",
+       "      <th>5207</th>\n",
        "      <td>Television</td>\n",
-       "      <td>115</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>11</td>\n",
-       "      <td>33</td>\n",
-       "      <td>220.0</td>\n",
-       "      <td>234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>Refridgerator</td>\n",
-       "      <td>100</td>\n",
+       "      <td>119</td>\n",
        "      <td>cold</td>\n",
        "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>14</td>\n",
-       "      <td>40</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>246</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3554</th>\n",
-       "      <td>Refridgerator</td>\n",
-       "      <td>113</td>\n",
-       "      <td>very cold</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>9</td>\n",
-       "      <td>47</td>\n",
-       "      <td>257.0</td>\n",
-       "      <td>252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>Refridgerator</td>\n",
-       "      <td>100</td>\n",
-       "      <td>very cold</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>4</td>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>afternoon</td>\n",
+       "      <td>15</td>\n",
        "      <td>22</td>\n",
-       "      <td>259.0</td>\n",
-       "      <td>252</td>\n",
+       "      <td>268.0</td>\n",
+       "      <td>208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2541</th>\n",
+       "      <th>720</th>\n",
+       "      <td>Refridgerator</td>\n",
+       "      <td>102</td>\n",
+       "      <td>low cold</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>afternoon</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "      <td>284.0</td>\n",
+       "      <td>238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2518</th>\n",
        "      <td>Refridgerator</td>\n",
        "      <td>109</td>\n",
-       "      <td>very cold</td>\n",
+       "      <td>cold</td>\n",
        "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>10</td>\n",
-       "      <td>20</td>\n",
-       "      <td>229.0</td>\n",
-       "      <td>252</td>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>afternoon</td>\n",
+       "      <td>7</td>\n",
+       "      <td>37</td>\n",
+       "      <td>261.0</td>\n",
+       "      <td>244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1540</th>\n",
+       "      <th>1238</th>\n",
        "      <td>Refridgerator</td>\n",
-       "      <td>105</td>\n",
-       "      <td>low hot</td>\n",
+       "      <td>104</td>\n",
+       "      <td>very cold</td>\n",
        "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>afternoon</td>\n",
+       "      <td>14</td>\n",
+       "      <td>27</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4875</th>\n",
+       "      <td>Refridgerator</td>\n",
+       "      <td>118</td>\n",
+       "      <td>very cold</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>afternoon</td>\n",
        "      <td>9</td>\n",
-       "      <td>47</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>258</td>\n",
+       "      <td>23</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2271</th>\n",
+       "      <td>Refridgerator</td>\n",
+       "      <td>108</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>afternoon</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>262</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             device  room weather_type        date from_time   to_time   time  \\\n",
-       "5207     Television   119     low cold  2018-01-14  21:00:00  22:00:00  night   \n",
-       "4133     Television   115     very hot  2018-01-14  21:00:00  22:00:00  night   \n",
-       "193   Refridgerator   100         cold  2018-01-14  21:00:00  22:00:00  night   \n",
-       "3554  Refridgerator   113    very cold  2018-01-14  21:00:00  22:00:00  night   \n",
-       "192   Refridgerator   100    very cold  2018-01-14  21:00:00  22:00:00  night   \n",
-       "2541  Refridgerator   109    very cold  2018-01-14  21:00:00  22:00:00  night   \n",
-       "1540  Refridgerator   105      low hot  2018-01-14  21:00:00  22:00:00  night   \n",
+       "             device  room weather_type        date from_time   to_time  \\\n",
+       "5206     Television   119     low cold  2018-01-14  14:00:00  15:00:00   \n",
+       "5207     Television   119         cold  2018-01-14  14:00:00  15:00:00   \n",
+       "720   Refridgerator   102     low cold  2018-01-14  14:00:00  15:00:00   \n",
+       "2518  Refridgerator   109         cold  2018-01-14  14:00:00  15:00:00   \n",
+       "1238  Refridgerator   104    very cold  2018-01-14  14:00:00  15:00:00   \n",
+       "4875  Refridgerator   118    very cold  2018-01-14  14:00:00  15:00:00   \n",
+       "2271  Refridgerator   108          hot  2018-01-14  14:00:00  15:00:00   \n",
        "\n",
-       "      no_of_people  time_stayed_mins  power  priorities  \n",
-       "5207             4                 3  201.0         204  \n",
-       "4133            11                33  220.0         234  \n",
-       "193             14                40  116.0         246  \n",
-       "3554             9                47  257.0         252  \n",
-       "192              4                22  259.0         252  \n",
-       "2541            10                20  229.0         252  \n",
-       "1540             9                47  120.0         258  "
+       "           time  no_of_people  time_stayed_mins  power  priorities  \n",
+       "5206  afternoon             8                41  289.0         202  \n",
+       "5207  afternoon            15                22  268.0         208  \n",
+       "720   afternoon             4                13  284.0         238  \n",
+       "2518  afternoon             7                37  261.0         244  \n",
+       "1238  afternoon            14                27  133.0         250  \n",
+       "4875  afternoon             9                23  280.0         250  \n",
+       "2271  afternoon             6                 9  130.0         262  "
       ]
      },
      "execution_count": 9,
