--- a/regression/random_forest.ipynb
+++ b/regression/random_forest.ipynb
@@ -291,7 +291,8 @@
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(hot_X, y, test_size=0.25, random_state=0)"
+    "with tf.device('/gpu:0'):\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(hot_X, y, test_size=0.25, random_state=0)"
    ]
   },
   {
@@ -323,8 +324,9 @@
     }
    ],
    "source": [
-    "regressor = RandomForestRegressor(n_estimators=300, random_state=0)\n",
-    "regressor.fit(X_train, y_train)"
+    "with tf.device('/gpu:0'):\n",
+    "    regressor = RandomForestRegressor(n_estimators=300, random_state=0)\n",
+    "    regressor.fit(X_train, y_train)"
    ]
   },
   {
