Re run models with validations and metrics

--- a/regression/multiple_regression.ipynb
+++ b/regression/multiple_regression.ipynb
@@ -23,6 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import pickle\n",
+    "from sklearn import metrics\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -46,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/trail1/home_data.csv')"
+    "df = pd.read_csv('../data/trial_1/home_data.csv')"
    ]
   },
   {
@@ -100,7 +101,7 @@
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
        "      <td>low cold</td>\n",
-       "      <td>2018-01-01</td>\n",
+       "      <td>01-01-2018</td>\n",
        "      <td>03:00:00</td>\n",
        "      <td>04:00:00</td>\n",
        "      <td>midnight</td>\n",
@@ -113,7 +114,7 @@
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
        "      <td>low hot</td>\n",
-       "      <td>2018-01-01</td>\n",
+       "      <td>01-01-2018</td>\n",
        "      <td>05:00:00</td>\n",
        "      <td>06:00:00</td>\n",
        "      <td>early morning</td>\n",
@@ -126,7 +127,7 @@
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
        "      <td>low hot</td>\n",
-       "      <td>2018-01-01</td>\n",
+       "      <td>01-01-2018</td>\n",
        "      <td>09:00:00</td>\n",
        "      <td>10:00:00</td>\n",
        "      <td>morning</td>\n",
@@ -139,7 +140,7 @@
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
        "      <td>cold</td>\n",
-       "      <td>2018-01-01</td>\n",
+       "      <td>01-01-2018</td>\n",
        "      <td>13:00:00</td>\n",
        "      <td>14:00:00</td>\n",
        "      <td>afternoon</td>\n",
@@ -152,7 +153,7 @@
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
        "      <td>low cold</td>\n",
-       "      <td>2018-01-01</td>\n",
+       "      <td>01-01-2018</td>\n",
        "      <td>14:00:00</td>\n",
        "      <td>15:00:00</td>\n",
        "      <td>afternoon</td>\n",
@@ -166,11 +167,11 @@
       ],
       "text/plain": [
        "  device  room weather_type        date from_time   to_time           time  \\\n",
-       "0     AC   100     low cold  2018-01-01  03:00:00  04:00:00       midnight   \n",
-       "1     AC   100      low hot  2018-01-01  05:00:00  06:00:00  early morning   \n",
-       "2     AC   100      low hot  2018-01-01  09:00:00  10:00:00        morning   \n",
-       "3     AC   100         cold  2018-01-01  13:00:00  14:00:00      afternoon   \n",
-       "4     AC   100     low cold  2018-01-01  14:00:00  15:00:00      afternoon   \n",
+       "0     AC   100     low cold  01-01-2018  03:00:00  04:00:00       midnight   \n",
+       "1     AC   100      low hot  01-01-2018  05:00:00  06:00:00  early morning   \n",
+       "2     AC   100      low hot  01-01-2018  09:00:00  10:00:00        morning   \n",
+       "3     AC   100         cold  01-01-2018  13:00:00  14:00:00      afternoon   \n",
+       "4     AC   100     low cold  01-01-2018  14:00:00  15:00:00      afternoon   \n",
        "\n",
        "   no_of_people  time_stayed_mins  power  \n",
        "0            12                29   1091  \n",
@@ -362,6 +363,27 @@
    ],
    "source": [
     "joblib.dump(regressor, '../model/multiple_reg.pkl') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error:  176.34381900441628\n",
+      "Mean Squared Error:  62479.41807114327\n",
+      "Root Mean Squared Error:  249.95883275280207\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Mean Absolute Error: \", metrics.mean_absolute_error(y_test, y_pred))\n",
+    "print(\"Mean Squared Error: \", metrics.mean_squared_error(y_test, y_pred))\n",
+    "print(\"Root Mean Squared Error: \", np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
    ]
   }
  ],
